--- a/archives/toutiao-search/2024-03-20.md
+++ b/archives/toutiao-search/2024-03-20.md
@@ -1,57 +1,67 @@
 # 2024-03-20
 
-共 99 条
+共 106 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Mar 20 2024 06:00:36 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Mar 20 2024 07:00:35 GMT+0800 (China Standard Time) -->
+1. [19岁小伙救下5人后溺亡 多方发声](https://so.toutiao.com/search?keyword=19岁小伙救下5人后溺亡+多方发声)
 1. [张立群任西安交通大学校长](https://so.toutiao.com/search?keyword=张立群任西安交通大学校长)
-1. [许家印被限制高消费](https://so.toutiao.com/search?keyword=许家印被限制高消费)
 1. [感受中国经济“春意浓”](https://so.toutiao.com/search?keyword=感受中国经济“春意浓”)
 1. [王树国3次鞠躬告别西交大师生](https://so.toutiao.com/search?keyword=王树国3次鞠躬告别西交大师生)
-1. [官方通报教学楼栏杆断裂学生跌落](https://so.toutiao.com/search?keyword=官方通报教学楼栏杆断裂学生跌落)
-1. [全抖音反网暴意识觉醒了](https://so.toutiao.com/search?keyword=全抖音反网暴意识觉醒了)
-1. [19岁小伙救下5人后溺亡 多方发声](https://so.toutiao.com/search?keyword=19岁小伙救下5人后溺亡+多方发声)
-1. [“消失”的凯特王妃](https://so.toutiao.com/search?keyword=“消失”的凯特王妃)
-1. [倪萍分享减重40斤方法](https://so.toutiao.com/search?keyword=倪萍分享减重40斤方法)
+1. [救人遇难小伙是独子：不是首次救人](https://so.toutiao.com/search?keyword=救人遇难小伙是独子：不是首次救人)
 1. [恒大被罚41.75亿到底怎么缴](https://so.toutiao.com/search?keyword=恒大被罚41.75亿到底怎么缴)
-1. [台扬言增兵金门 三大舰机打头阵](https://so.toutiao.com/search?keyword=台扬言增兵金门+三大舰机打头阵)
-1. [德拟对普京不加总统头衔 俄方回应](https://so.toutiao.com/search?keyword=德拟对普京不加总统头衔+俄方回应)
+1. [官方通报教学楼栏杆断裂学生跌落](https://so.toutiao.com/search?keyword=官方通报教学楼栏杆断裂学生跌落)
+1. [“消失”的凯特王妃](https://so.toutiao.com/search?keyword=“消失”的凯特王妃)
+1. [许家印被限制高消费](https://so.toutiao.com/search?keyword=许家印被限制高消费)
+1. [全抖音反网暴意识觉醒了](https://so.toutiao.com/search?keyword=全抖音反网暴意识觉醒了)
+1. [何赛飞追着代拍打](https://so.toutiao.com/search?keyword=何赛飞追着代拍打)
+1. [男子被流浪猫绊倒 投喂者赔24万](https://so.toutiao.com/search?keyword=男子被流浪猫绊倒+投喂者赔24万)
 1. [“重庆一商业楼火灾伤亡惨重”不实](https://so.toutiao.com/search?keyword=“重庆一商业楼火灾伤亡惨重”不实)
-1. [兔狲“狲大娘”因病死亡](https://so.toutiao.com/search?keyword=兔狲“狲大娘”因病死亡)
+1. [倪萍分享减重40斤方法](https://so.toutiao.com/search?keyword=倪萍分享减重40斤方法)
+1. [媒体人：李梦就赴美一事亮明了态度](https://so.toutiao.com/search?keyword=媒体人：李梦就赴美一事亮明了态度)
+1. [网友洛杉矶偶遇贾玲](https://so.toutiao.com/search?keyword=网友洛杉矶偶遇贾玲)
+1. [德拟对普京不加总统头衔 俄方回应](https://so.toutiao.com/search?keyword=德拟对普京不加总统头衔+俄方回应)
+1. [旅游博主去南极看冰崩获近千万点赞](https://so.toutiao.com/search?keyword=旅游博主去南极看冰崩获近千万点赞)
+1. [恒大处罚过轻？专家：终极审判还没来](https://so.toutiao.com/search?keyword=恒大处罚过轻？专家：终极审判还没来)
+1. [台扬言增兵金门 三大舰机打头阵](https://so.toutiao.com/search?keyword=台扬言增兵金门+三大舰机打头阵)
+1. [造谣遇害男孩遭活埋微博账号被处置](https://so.toutiao.com/search?keyword=造谣遇害男孩遭活埋微博账号被处置)
+1. [师傅不系安全绳在21楼窗外打胶](https://so.toutiao.com/search?keyword=师傅不系安全绳在21楼窗外打胶)
 1. [五问恒大被罚：烂尾楼损失如何挽回](https://so.toutiao.com/search?keyword=五问恒大被罚：烂尾楼损失如何挽回)
 1. [马克龙为何对俄从“鸽”转“鹰”](https://so.toutiao.com/search?keyword=马克龙为何对俄从“鸽”转“鹰”)
-1. [造谣遇害男孩遭活埋微博账号被处置](https://so.toutiao.com/search?keyword=造谣遇害男孩遭活埋微博账号被处置)
-1. [网友洛杉矶偶遇贾玲](https://so.toutiao.com/search?keyword=网友洛杉矶偶遇贾玲)
-1. [男子被流浪猫绊倒 投喂者赔24万](https://so.toutiao.com/search?keyword=男子被流浪猫绊倒+投喂者赔24万)
-1. [恒大处罚过轻？专家：终极审判还没来](https://so.toutiao.com/search?keyword=恒大处罚过轻？专家：终极审判还没来)
-1. [国产伟哥去年销售近13亿](https://so.toutiao.com/search?keyword=国产伟哥去年销售近13亿)
-1. [旅游博主去南极看冰崩获近千万点赞](https://so.toutiao.com/search?keyword=旅游博主去南极看冰崩获近千万点赞)
-1. [王树国卸任西安交通大学校长](https://so.toutiao.com/search?keyword=王树国卸任西安交通大学校长)
-1. [王楚钦：目标远不止于排名世界第一](https://so.toutiao.com/search?keyword=王楚钦：目标远不止于排名世界第一)
-1. [何赛飞追着代拍打](https://so.toutiao.com/search?keyword=何赛飞追着代拍打)
-1. [15岁双胞胎被西安交大少年班录取](https://so.toutiao.com/search?keyword=15岁双胞胎被西安交大少年班录取)
-1. [倪萍：婚姻的真谛是改变自己](https://so.toutiao.com/search?keyword=倪萍：婚姻的真谛是改变自己)
-1. [王楚钦48万奖金个人能分到多少](https://so.toutiao.com/search?keyword=王楚钦48万奖金个人能分到多少)
-1. [最高检：6名厅级干部被决定逮捕](https://so.toutiao.com/search?keyword=最高检：6名厅级干部被决定逮捕)
-1. [媒体人：李梦就赴美一事亮明了态度](https://so.toutiao.com/search?keyword=媒体人：李梦就赴美一事亮明了态度)
-1. [救人遇难小伙是独子：不是首次救人](https://so.toutiao.com/search?keyword=救人遇难小伙是独子：不是首次救人)
-1. [日本经济走出通缩要起飞了吗](https://so.toutiao.com/search?keyword=日本经济走出通缩要起飞了吗)
-1. [师傅不系安全绳在21楼窗外打胶](https://so.toutiao.com/search?keyword=师傅不系安全绳在21楼窗外打胶)
-1. [中信证券被指“逼宫”交易所](https://so.toutiao.com/search?keyword=中信证券被指“逼宫”交易所)
-1. [日本多地水体和居民血液检出有害物](https://so.toutiao.com/search?keyword=日本多地水体和居民血液检出有害物)
-1. [21岁百万粉女网红被判刑](https://so.toutiao.com/search?keyword=21岁百万粉女网红被判刑)
-1. [专家：普京胜选为何最看重中方贺电](https://so.toutiao.com/search?keyword=专家：普京胜选为何最看重中方贺电)
-1. [肝癌晚期女孩骨折父亲寸步不离照顾](https://so.toutiao.com/search?keyword=肝癌晚期女孩骨折父亲寸步不离照顾)
-1. [雷军官宣4月份开始交付小米SU7](https://so.toutiao.com/search?keyword=雷军官宣4月份开始交付小米SU7)
-1. [普京与另外三位总统候选人红场同框](https://so.toutiao.com/search?keyword=普京与另外三位总统候选人红场同框)
 1. [比亚迪将采用英伟达汽车芯片](https://so.toutiao.com/search?keyword=比亚迪将采用英伟达汽车芯片)
+1. [1.95万件救灾物资被紧急调往四川](https://so.toutiao.com/search?keyword=1.95万件救灾物资被紧急调往四川)
+1. [王楚钦48万奖金个人能分到多少](https://so.toutiao.com/search?keyword=王楚钦48万奖金个人能分到多少)
+1. [雷军官宣4月份开始交付小米SU7](https://so.toutiao.com/search?keyword=雷军官宣4月份开始交付小米SU7)
+1. [15岁双胞胎被西安交大少年班录取](https://so.toutiao.com/search?keyword=15岁双胞胎被西安交大少年班录取)
+1. [王树国卸任西安交通大学校长](https://so.toutiao.com/search?keyword=王树国卸任西安交通大学校长)
+1. [中信证券被指“逼宫”交易所](https://so.toutiao.com/search?keyword=中信证券被指“逼宫”交易所)
 1. [中国有208万户千万资产家庭](https://so.toutiao.com/search?keyword=中国有208万户千万资产家庭)
-1. [外交部大使会见哈马斯政治局主席](https://so.toutiao.com/search?keyword=外交部大使会见哈马斯政治局主席)
+1. [教育部公布24种新增本科专业](https://so.toutiao.com/search?keyword=教育部公布24种新增本科专业)
+1. [英伟达官宣世界首款人形机器人模型](https://so.toutiao.com/search?keyword=英伟达官宣世界首款人形机器人模型)
+1. [倪萍：婚姻的真谛是改变自己](https://so.toutiao.com/search?keyword=倪萍：婚姻的真谛是改变自己)
+1. [日本经济走出通缩要起飞了吗](https://so.toutiao.com/search?keyword=日本经济走出通缩要起飞了吗)
+1. [英伟达“新核弹”B200发布](https://so.toutiao.com/search?keyword=英伟达“新核弹”B200发布)
+1. [王楚钦：目标远不止于排名世界第一](https://so.toutiao.com/search?keyword=王楚钦：目标远不止于排名世界第一)
+1. [21岁百万粉女网红被判刑](https://so.toutiao.com/search?keyword=21岁百万粉女网红被判刑)
+1. [北大回应考生与前校长蔡元培同名](https://so.toutiao.com/search?keyword=北大回应考生与前校长蔡元培同名)
+1. [最高检：6名厅级干部被决定逮捕](https://so.toutiao.com/search?keyword=最高检：6名厅级干部被决定逮捕)
+1. [赵丽颖新剧首播口碑](https://so.toutiao.com/search?keyword=赵丽颖新剧首播口碑)
+1. [男子被猫抓伤后确诊“猫抓病”](https://so.toutiao.com/search?keyword=男子被猫抓伤后确诊“猫抓病”)
+1. [辽宁省教育厅原一级巡视员被捕](https://so.toutiao.com/search?keyword=辽宁省教育厅原一级巡视员被捕)
+1. [黄仁勋让迪士尼机器人活过来了](https://so.toutiao.com/search?keyword=黄仁勋让迪士尼机器人活过来了)
+1. [普京与另外三位总统候选人红场同框](https://so.toutiao.com/search?keyword=普京与另外三位总统候选人红场同框)
 1. [日本时隔17年加息 结束负利率时代](https://so.toutiao.com/search?keyword=日本时隔17年加息+结束负利率时代)
+1. [辽宁检察机关依法对董亲学决定逮捕](https://so.toutiao.com/search?keyword=辽宁检察机关依法对董亲学决定逮捕)
+1. [专家：普京胜选为何最看重中方贺电](https://so.toutiao.com/search?keyword=专家：普京胜选为何最看重中方贺电)
+1. [情侣吵架 男生半夜潜入女友家偷狗](https://so.toutiao.com/search?keyword=情侣吵架+男生半夜潜入女友家偷狗)
+1. [兔狲“狲大娘”因病死亡](https://so.toutiao.com/search?keyword=兔狲“狲大娘”因病死亡)
+1. [国产伟哥去年销售近13亿](https://so.toutiao.com/search?keyword=国产伟哥去年销售近13亿)
+1. [日本多地水体和居民血液检出有害物](https://so.toutiao.com/search?keyword=日本多地水体和居民血液检出有害物)
+1. [肝癌晚期女孩骨折父亲寸步不离照顾](https://so.toutiao.com/search?keyword=肝癌晚期女孩骨折父亲寸步不离照顾)
+1. [外交部大使会见哈马斯政治局主席](https://so.toutiao.com/search?keyword=外交部大使会见哈马斯政治局主席)
 1. [香港基本法第23条23日正式刊宪生效](https://so.toutiao.com/search?keyword=香港基本法第23条23日正式刊宪生效)
 1. [主播曝“上门按摩”服务套路](https://so.toutiao.com/search?keyword=主播曝“上门按摩”服务套路)
 1. [中方：巴以局势当务之急是停火止战](https://so.toutiao.com/search?keyword=中方：巴以局势当务之急是停火止战)
-1. [1.95万件救灾物资被紧急调往四川](https://so.toutiao.com/search?keyword=1.95万件救灾物资被紧急调往四川)
 1. [英媒曝凯特术后首次露面视频](https://so.toutiao.com/search?keyword=英媒曝凯特术后首次露面视频)
 1. [香港议员：早立法就不会有“占中”](https://so.toutiao.com/search?keyword=香港议员：早立法就不会有“占中”)
 1. [房客欠租失踪 房东看着寄卖品发愁](https://so.toutiao.com/search?keyword=房客欠租失踪+房东看着寄卖品发愁)
@@ -59,7 +69,6 @@
 1. [李梦为奥运任务婉拒WNBA邀请](https://so.toutiao.com/search?keyword=李梦为奥运任务婉拒WNBA邀请)
 1. [小米汽车超级工厂正式揭幕](https://so.toutiao.com/search?keyword=小米汽车超级工厂正式揭幕)
 1. [黄仁勋宣布推出新一代AI芯片](https://so.toutiao.com/search?keyword=黄仁勋宣布推出新一代AI芯片)
-1. [男子被猫抓伤后确诊“猫抓病”](https://so.toutiao.com/search?keyword=男子被猫抓伤后确诊“猫抓病”)
 1. [冯仑：恒大许家印被罚只是开始](https://so.toutiao.com/search?keyword=冯仑：恒大许家印被罚只是开始)
 1. [马斯克公开Grok源代码意味着什么](https://so.toutiao.com/search?keyword=马斯克公开Grok源代码意味着什么)
 1. [46岁男子醉驾被查 家属称还是孩子](https://so.toutiao.com/search?keyword=46岁男子醉驾被查+家属称还是孩子)
@@ -90,7 +99,6 @@
 1. [315晚会后胖东来又人满为患了](https://so.toutiao.com/search?keyword=315晚会后胖东来又人满为患了)
 1. [男孩学校遭霸凌父母讨说法被踢出群](https://so.toutiao.com/search?keyword=男孩学校遭霸凌父母讨说法被踢出群)
 1. [马克龙为何多次重申“派兵说”](https://so.toutiao.com/search?keyword=马克龙为何多次重申“派兵说”)
-1. [黄仁勋让迪士尼机器人活过来了](https://so.toutiao.com/search?keyword=黄仁勋让迪士尼机器人活过来了)
 1. [马斯克被曝涉间谍 会被中国封杀吗](https://so.toutiao.com/search?keyword=马斯克被曝涉间谍+会被中国封杀吗)
 1. [男子为讨好岳父 4次拉车门盗窃烟酒](https://so.toutiao.com/search?keyword=男子为讨好岳父+4次拉车门盗窃烟酒)
 1. [住宅层高不达标施工方用千斤顶硬怼](https://so.toutiao.com/search?keyword=住宅层高不达标施工方用千斤顶硬怼)
@@ -101,6 +109,5 @@
 1. [淀粉肠小贩不知为何出摊没人买](https://so.toutiao.com/search?keyword=淀粉肠小贩不知为何出摊没人买)
 1. [济南600万资产家庭达1.6万户](https://so.toutiao.com/search?keyword=济南600万资产家庭达1.6万户)
 1. [36岁男子确诊细胞瘤决定捐献器官](https://so.toutiao.com/search?keyword=36岁男子确诊细胞瘤决定捐献器官)
-1. [英伟达“新核弹”B200发布](https://so.toutiao.com/search?keyword=英伟达“新核弹”B200发布)
 1. [港澳台居民入黔旅游免门票至年底](https://so.toutiao.com/search?keyword=港澳台居民入黔旅游免门票至年底)
 <!-- END TOUTIAO -->
